; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/usb/extr_huawei_cdc_ncm.c_huawei_cdc_ncm_unbind.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/usb/extr_huawei_cdc_ncm.c_huawei_cdc_ncm_unbind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usbnet = type { i32 }
%struct.usb_interface = type { i32 }
%struct.huawei_cdc_ncm_state = type { %struct.TYPE_2__*, %struct.cdc_ncm_ctx* }
%struct.TYPE_2__ = type { i32 (i32)* }
%struct.cdc_ncm_ctx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usbnet*, %struct.usb_interface*)* @huawei_cdc_ncm_unbind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @huawei_cdc_ncm_unbind(%struct.usbnet* %0, %struct.usb_interface* %1) #0 {
  %3 = alloca %struct.usbnet*, align 8
  %4 = alloca %struct.usb_interface*, align 8
  %5 = alloca %struct.huawei_cdc_ncm_state*, align 8
  %6 = alloca %struct.cdc_ncm_ctx*, align 8
  store %struct.usbnet* %0, %struct.usbnet** %3, align 8
  store %struct.usb_interface* %1, %struct.usb_interface** %4, align 8
  %7 = load %struct.usbnet*, %struct.usbnet** %3, align 8
  %8 = getelementptr inbounds %struct.usbnet, %struct.usbnet* %7, i32 0, i32 0
  %9 = bitcast i32* %8 to i8*
  %10 = bitcast i8* %9 to %struct.huawei_cdc_ncm_state*
  store %struct.huawei_cdc_ncm_state* %10, %struct.huawei_cdc_ncm_state** %5, align 8
  %11 = load %struct.huawei_cdc_ncm_state*, %struct.huawei_cdc_ncm_state** %5, align 8
  %12 = getelementptr inbounds %struct.huawei_cdc_ncm_state, %struct.huawei_cdc_ncm_state* %11, i32 0, i32 1
  %13 = load %struct.cdc_ncm_ctx*, %struct.cdc_ncm_ctx** %12, align 8
  store %struct.cdc_ncm_ctx* %13, %struct.cdc_ncm_ctx** %6, align 8
  %14 = load %struct.huawei_cdc_ncm_state*, %struct.huawei_cdc_ncm_state** %5, align 8
  %15 = getelementptr inbounds %struct.huawei_cdc_ncm_state, %struct.huawei_cdc_ncm_state* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = icmp ne %struct.TYPE_2__* %16, null
  br i1 %17, label %18, label %35

18:                                               ; preds = %2
  %19 = load %struct.huawei_cdc_ncm_state*, %struct.huawei_cdc_ncm_state** %5, align 8
  %20 = getelementptr inbounds %struct.huawei_cdc_ncm_state, %struct.huawei_cdc_ncm_state* %19, i32 0, i32 0
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32 (i32)*, i32 (i32)** %22, align 8
  %24 = icmp ne i32 (i32)* %23, null
  br i1 %24, label %25, label %35

25:                                               ; preds = %18
  %26 = load %struct.huawei_cdc_ncm_state*, %struct.huawei_cdc_ncm_state** %5, align 8
  %27 = getelementptr inbounds %struct.huawei_cdc_ncm_state, %struct.huawei_cdc_ncm_state* %26, i32 0, i32 0
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i32 (i32)*, i32 (i32)** %29, align 8
  %31 = load %struct.cdc_ncm_ctx*, %struct.cdc_ncm_ctx** %6, align 8
  %32 = getelementptr inbounds %struct.cdc_ncm_ctx, %struct.cdc_ncm_ctx* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 %30(i32 %33)
  br label %35

35:                                               ; preds = %25, %18, %2
  %36 = load %struct.huawei_cdc_ncm_state*, %struct.huawei_cdc_ncm_state** %5, align 8
  %37 = getelementptr inbounds %struct.huawei_cdc_ncm_state, %struct.huawei_cdc_ncm_state* %36, i32 0, i32 0
  store %struct.TYPE_2__* null, %struct.TYPE_2__** %37, align 8
  %38 = load %struct.usbnet*, %struct.usbnet** %3, align 8
  %39 = load %struct.usb_interface*, %struct.usb_interface** %4, align 8
  %40 = call i32 @cdc_ncm_unbind(%struct.usbnet* %38, %struct.usb_interface* %39)
  ret void
}

declare dso_local i32 @cdc_ncm_unbind(%struct.usbnet*, %struct.usb_interface*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
